new user struct for handler
